Fix bug with too small columns on Chrome

--- a/app/styles/board/board.scss
+++ b/app/styles/board/board.scss
@@ -1,18 +1,16 @@
 #board-container {
-	display: flex;
-	flex-direction: column;
 	height: 100%;
 }
 
 #board-table-wrapper {
-	flex-grow: 1;
+	height: 100%;
 	overflow: auto;
 	padding: 0 10px 10px;
 }
 
 #table {
 	background-color: white;
-	height: 100%;
+	height: 99%;
 	table-layout: fixed;
 
 	td {
@@ -33,7 +31,7 @@
 		}
 	}
 
-	@media #{$small-and-down} {
+	@media only screen and (max-width : 600px) {
 		th, td {
 			width: 50vw;
 		}
