--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,13 +18,9 @@ body {
 	padding: 0;
 }
 
-body {
-	display: flex;
-	flex-direction: column;
-}
-
 #main-body {
-	flex-grow: 1;
+	height: 100%;
+	padding-top: 74px;
 
 	div[ui-view],
 	ui-view {
