--- a/app/styles/navbar/_navbar.scss
+++ b/app/styles/navbar/_navbar.scss
@@ -1,8 +1,6 @@
 .navbar-fixed {
-	flex-shrink: 0;
-}
-#navbar {
-	margin-bottom: 10px;
+	height: 1px;
+	margin-bottom: -1px;
 }
 
 #navbar-state-name {
